fixes theme switch oversized on mobile

--- a/components/ThemeSwitch/ThemeSwitch.css
+++ b/components/ThemeSwitch/ThemeSwitch.css
@@ -21,10 +21,6 @@
     block-size: 100%;
     stroke-linecap: round;
   }
-
-  @media (hover: none) {
-    --size: 48px;
-  }
 }
 
 .sun-and-moon {
